Testando se essa branch interfere na do dia 04

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/Ex 05/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/Ex 05/index.html
@@ -42,5 +42,8 @@
         <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
+
+<!-- TESTANDO SE ALTERAR ESSA BRANCH E MERGE VAIAA ALTERAR A BRANCH FRIADA DEPOIS -->
+
   </body>
 </html>
