Adiciona menu nav

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
@@ -9,5 +9,15 @@
         <h1>Soco a 80km/h: </h1>
         <h2>Conheça o Stomatopoda</h2>
     </header>
+
+    <nav>
+        <ul>
+            <li>Página Inicial</li>
+            <li>Sobre</li>
+            <li>Contato</li>
+        </ul>
+    </nav>
+
+    
   </body>
 </html>
