Adiciona primeira section

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
@@ -18,6 +18,16 @@
         </ul>
     </nav>
 
-    
+    <article>
+        <header>
+            <h2>Fatos sobre o Stomatopoda</h2>
+        </header>
+        <section>
+            <h2>Fato 01</h2>
+            <h3>Estranhezas desse ser</h3>
+            Lorem ipsum dolor, sit amet consectetur <em>Odontodactylus scyllarus</em> elit. Magnam reiciendis, at labore, nostrum illo eius consequatur animi quos, minus quod doloribus neque. Totam blanditiis accusamus rerum veritatis dignissimos repudiandae labore deleniti omnis consequuntur libero officia quis, laborum mollitia exercitationem saepe deserunt repellendus alias earum. Aspernatur, deleniti. Cum numquam odio perspiciatis quisquam, labore expedita, nulla quos, voluptate nam voluptates quod itaque veniam libero possimus sapiente? Quod accusantium, reprehenderit quae eius odio, ratione, facilis earum quisquam molestias laboriosam rerum itaque pariatur totam magni. Voluptatibus dolores doloremque saepe, aperiam labore repellendus minus iusto minima asperiores pariatur consectetur, deserunt magnam nulla corporis tempore nisi nemo vero? Nobis, modi doloribus fugit nostrum dolorem officia magni perferendis unde nulla mollitia maxime enim et. Distinctio iusto nesciunt atque nam exercitationem modi, mollitia at debitis saepe. Vel ut amet minus? Ipsa, voluptatem quis. Iure obcaecati nesciunt repellat repudiandae distinctio voluptate nam dolore beatae quia illum quam delectus quisquam, tempora sed a ratione. Placeat tempore consectetur sint nesciunt, a, dolorum perferendis natus error illum mollitia numquam consequuntur dicta, ut molestiae minus cumque eius repellendus quisquam omnis voluptates deserunt! Obcaecati sapiente veniam eius! Error voluptatibus explicabo alias distinctio provident? Reiciendis, voluptatibus non accusantium consequatur molestias tempore laboriosam placeat quisquam neque.
+        </section>
+        
+    </article>
   </body>
 </html>
