Pequenas modificações depois da table

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
@@ -61,6 +61,10 @@
                 </tr>
             </table>
         </section>
+
+        <section>
+            
+        </section>
         
     </article>
   </body>
