Avalia e corrige código com CodeSniffer

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="./style.css">
-   
+   <title>tudo sobre o Stomatopoda</title>
 
   </head>
   <body>
@@ -96,7 +96,7 @@
     <aside class="lado-direito">
         <h2>Quer ver esse bicho em ação?</h2>
 
-        <iframe width="300" height="168"
+        <iframe width="300" height="168" title="Video sobre o bicho"
         src="https://www.youtube.com/embed/tgbNymZ7vqY">
         </iframe>
         <p>bubu</p>
@@ -108,3 +108,4 @@
 
   </body>
 </html>
+
