Conclui exercicio de fixação

--- a/front-end/secao-01-intro-front-end-js-assincrono/dia-01/ex-fix/index.html
+++ b/front-end/secao-01-intro-front-end-js-assincrono/dia-01/ex-fix/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>Gerador de Senhas Seguras</h1>
-  <button>Gerar Senha Segura</button>
+  <button id="btn-generate-password">Gerar Senha Segura</button>
   <h2>...</h2>
+  <!-- <button id="btn-copy-to-clipboard">copy</button> -->
 
   <script src="./src/main.js" type="module"></script>
 </body>
