Conclui exercicio pos aula 01 - Validador de campos

--- a/front-end/secao-01-intro-front-end-js-assincrono/dia-01/ex-01/index.html
+++ b/front-end/secao-01-intro-front-end-js-assincrono/dia-01/ex-01/index.html
@@ -18,6 +18,10 @@
         <select name="tipo-de-valor" id="input-tipo-de-dado">
           <option value="cpf">CPF</option>
           <option value="email">E-mail</option>
+          <option value="cartao">Cartão de Crédito</option>
+          <option value="placa">Placa de automóvel</option>
+          <option value="senha">Senha forte?</option>
+
         </select>
       </form>
       <button id="validate-btn">Validar</button>
