--- a/front-end/secao-01-intro-front-end-js-assincrono/dia-02/ex-01/index.html
+++ b/front-end/secao-01-intro-front-end-js-assincrono/dia-02/ex-01/index.html
@@ -12,7 +12,7 @@
       <h1>SuperHeroes</h1>
       <div id="img-container"></div>
       <h3 id="display-name">Nome do seu personagem</h3>
-      <button id="btn-sortear"></button>
+      <button id="btn-sortear">Sortear</button>
     </div>
   </main>
   
